--- a/requirements.txt
+++ b/requirements.txt
@@ -1,85 +1,51 @@
-absl-py @ file:///C:/ci/absl-py_1600279486584/work
+absl-py==0.10.0
 astunparse==1.6.3
-backcall==0.2.0
-blinker==1.4
-brotlipy==0.7.0
-cachetools @ file:///tmp/build/80754af9/cachetools_1596822027882/work
+cachetools==4.1.1
 certifi==2020.6.20
-cffi @ file:///C:/ci/cffi_1600681203656/work
 chardet==3.0.4
 click==7.1.2
-cryptography @ file:///C:/ci/cryptography_1598892109987/work
 cycler==0.10.0
-decorator==4.4.2
 Flask==1.1.2
 gast==0.3.3
-google-auth @ file:///tmp/build/80754af9/google-auth_1596863485713/work
+google-auth==1.21.2
 google-auth-oauthlib==0.4.1
-google-colab==1.0.0
 google-pasta==0.2.0
-grpcio @ file:///C:/ci/grpcio_1597406495377/work
+grpcio==1.32.0
 h5py==2.10.0
-idna==2.8
-imbalanced-learn==0.7.0
-imblearn==0.0
+idna==2.10
 importlib-metadata==2.0.0
-ipykernel==4.6.1
-ipython==5.5.0
-ipython-genutils==0.2.0
 itsdangerous==1.1.0
-jedi==0.17.2
 Jinja2==2.11.2
-jupyter-client==6.1.6
-jupyter-core==4.6.3
 Keras-Preprocessing==1.1.2
 kiwisolver==1.2.0
 Markdown==3.2.2
 MarkupSafe==1.1.1
-matplotlib @ file:///C:/ci/matplotlib-base_1597858295275/work
-mkl-fft==1.2.0
-mkl-random==1.1.1
-mkl-service==2.3.0
+matplotlib==3.3.1
 numpy==1.18.5
 oauthlib==3.1.0
-olefile==0.46
 opt-einsum==3.3.0
-pandas==0.24.2
-parso==0.7.1
-pickleshare==0.7.5
-Pillow @ file:///C:/ci/pillow_1594299032796/work
-portpicker==1.2.0
-prompt-toolkit==1.0.18
+packaging==20.4
+pandas==1.1.2
+Pillow==7.2.0
 protobuf==3.13.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-Pygments==2.6.1
-PyJWT==1.7.1
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1594392929924/work
 pyparsing==2.4.7
-pyreadline==2.1
-PySocks==1.7.1
 python-dateutil==2.8.1
 pytz==2020.1
-pywin32==228
-pyzmq==19.0.2
-requests==2.21.0
+requests==2.24.0
 requests-oauthlib==1.3.0
-rsa @ file:///tmp/build/80754af9/rsa_1596998415516/work
-scikit-learn==0.23.1
+rsa==4.6
 scipy==1.4.1
+sip==5.4.0
 six==1.15.0
 tensorboard==2.3.0
 tensorboard-plugin-wit==1.7.0
 tensorflow==2.3.0
 tensorflow-estimator==2.3.0
 termcolor==1.1.0
-threadpoolctl==2.1.0
-tornado==6.0.4
-traitlets==4.3.3
-urllib3==1.24.3
+toml==0.10.1
+urllib3==1.25.10
 Werkzeug==1.0.1
-win-inet-pton==1.1.0
-wincertstore==0.2
 wrapt==1.12.1
 zipp==3.2.0
